Actualizar style.css

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ main {
     font-weight: bold;
 }
 
-.btn-agregar { background: #ff2d55; color: #fff; }
+.btn-agregar { background: #27ae60; color: #fff; }
 .btn-consultar { background: #ff9800; color: #fff; }
 button.agregado { background: #aaa; color: #333; }
 
